--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class="container-slider">
     <button id="prev-button"><img src="https://jmanoel360.github.io/slider1/public/images/arrow.png" alt="prev-button"></button>
     <div class="container-images">
-      <img src="./public/images/thumb.png" alt="girl" class="slider on">
-      <img src="./public/images/thumbKurumi.png" alt="girl" class="slider">
+      <img src="./public/images/thumb.png" class="slider on">
+      <img src="./public/images/thumbKurumi.png" class="slider">
     </div>
     <button id="next-button"><img src="https://jmanoel360.github.io/slider1/public/images/arrow.png" alt="next-button"></button>
   </div>
