--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container-slider">
     <button id="prev-button"><img src="https://jmanoel360.github.io/slider1/public/images/arrow.png" alt="prev-button"></button>
     <div class="container-images">
-      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0007_Vector_Smart_Object.jpg" class="slider on">
+      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0007_Vector Smart Object.jpg" class="slider on">
       <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0005_Camada 1.jpg" class="slider">
       <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0004_Camada 2.jpg" class="slider">
       <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0000_Camada%206.jpg" class="slider">
