--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <div class="container-slider">
     <button id="prev-button"><img src="https://jmanoel360.github.io/slider1/public/images/arrow.png" alt="prev-button"></button>
     <div class="container-images">
-      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0007_Vector Smart Object.jpg" class="slider on">
-      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0005_Camada 1.jpg" class="slider">
-      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0004_Camada 2.jpg" class="slider">
-      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0000_Camada%206.jpg" class="slider">
-      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0003_Camada 3.jpg" class="slider">
-      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0006_Agrupar 1.jpg" class="slider">
-      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0002_Camada 4.jpg" class="slider">
-      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0001_Camada 5.jpg" class="slider">
+      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0007.jpg" class="slider on">
+      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0005.jpg" class="slider">
+      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0004.jpg" class="slider">
+      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0000.jpg" class="slider">
+      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0003.jpg" class="slider">
+      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0006.jpg" class="slider">
+      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0002.jpg" class="slider">
+      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0001.jpg" class="slider">
     </div>
     <button id="next-button"><img src="https://jmanoel360.github.io/slider1/public/images/arrow.png" alt="next-button"></button>
   </div>
