--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container-slider">
     <button id="prev-button"><img src="https://jmanoel360.github.io/slider1/public/images/arrow.png" alt="prev-button"></button>
     <div class="container-images">
-      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0007_Vector Smart Object.jpg" class="slider on">
+      <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0007.jpg" class="slider on">
       <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0005.jpg" class="slider">
       <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0004.jpg" class="slider">
       <img src="https://jmanoel360.github.io/slider1/public/images/marcas_0000.jpg" class="slider">
